--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>QrcodeScanner</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <!-- COMMON TAGS -->
+    <meta charset="utf-8" />
+    <!-- Search Engine -->
+    <meta
+      name="image"
+      content="https://res.cloudinary.com/djasyj8sc/image/upload/v1689658104/social-share-cover_dwl1w5.jpg"
+    />
+    <!-- Schema.org for Google -->
+    <meta
+      itemprop="image"
+      content="https://res.cloudinary.com/djasyj8sc/image/upload/v1689658104/social-share-cover_dwl1w5.jpg"
+    />
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:type" content="website" />
+    <base href="/" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
