--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,41 @@
     <!-- COMMON TAGS -->
     <meta charset="utf-8" />
     <!-- Search Engine -->
+    <!-- COMMON TAGS -->
+    <meta charset="utf-8" />
+    <title>สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo</title>
+    <!-- Search Engine -->
+    <meta
+      name="description"
+      content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
+    />
     <meta
       name="image"
       content="https://res.cloudinary.com/djasyj8sc/image/upload/v1689658104/social-share-cover_dwl1w5.jpg"
     />
     <!-- Schema.org for Google -->
     <meta
+      itemprop="name"
+      content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
+    />
+    <meta
+      itemprop="description"
+      content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
+    />
+    <meta
       itemprop="image"
       content="https://res.cloudinary.com/djasyj8sc/image/upload/v1689658104/social-share-cover_dwl1w5.jpg"
     />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta
+      name="og:title"
+      content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
+    />
+    <meta
+      name="og:description"
+      content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
+    />
     <meta name="og:type" content="website" />
-    <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
