--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,13 @@
     <!-- COMMON TAGS -->
     <meta charset="utf-8" />
     <!-- Search Engine -->
-    <!-- COMMON TAGS -->
-    <meta charset="utf-8" />
     <title>สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo</title>
     <!-- Search Engine -->
     <meta
       name="description"
       content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
-    <meta
-      name="image"
-      content="https://res.cloudinary.com/djasyj8sc/image/upload/v1689658104/social-share-cover_dwl1w5.jpg"
-    />
+    <meta name="image" content="src/assets/social-share-cover.jpg" />
     <!-- Schema.org for Google -->
     <meta
       itemprop="name"
@@ -25,10 +20,7 @@
       itemprop="description"
       content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
-    <meta
-      itemprop="image"
-      content="https://res.cloudinary.com/djasyj8sc/image/upload/v1689658104/social-share-cover_dwl1w5.jpg"
-    />
+    <meta itemprop="image" content="src/assets/social-share-cover.jpg" />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta
       name="og:title"
