--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
       content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="src/assets/social-share-cover.jpg" />
+    <meta property="og:image" content="src/assets/social-share-cover.png" />
     <meta property="og:image:alt" content="Preview image description" />
-    <meta property="og:url" content="https://www.example.com" />
+    <meta property="og:url" content="https://empeo.netlify.app" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
