--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="src/assets/social-share-cover.png" />
+    <meta property="og:image" content="./assets/social-share-cover.png" />
     <meta property="og:image:alt" content="Preview image description" />
     <meta property="og:url" content="https://empeo.netlify.app" />
 
