--- a/src/index.html
+++ b/src/index.html
@@ -3,32 +3,39 @@
   <head>
     <!-- COMMON TAGS -->
     <meta charset="utf-8" />
-    <!-- Search Engine -->
     <title>สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo</title>
     <!-- Search Engine -->
     <meta
       name="description"
       content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
-    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta
-      property="og:title"
+      name="image"
+      content="https://empeo.netlify.app/assets/social-share-cover.png"
+    />
+    <!-- Schema.org for Google -->
+    <meta
+      itemprop="name"
       content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
     />
     <meta
-      property="og:description"
+      itemprop="description"
       content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
-    <meta property="og:type" content="website" />
     <meta
-      property="og:image"
+      itemprop="image"
       content="https://empeo.netlify.app/assets/social-share-cover.png"
     />
-    <meta property="og:image:alt" content="Preview image description" />
-    <meta property="og:url" content="https://empeo.netlify.app/" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta
+      name="og:title"
+      content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
+    />
+    <meta
+      name="og:description"
+      content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
+    />
+    <meta name="og:type" content="website" />
   </head>
   <body>
     <app-root></app-root>
