--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="image"
-      content="https://empeo.netlify.app/assets/social-share-cover.png"
+      content="https://empeo.netlify.app/assets/social-share-cover.jpg"
     />
     <!-- Schema.org for Google -->
     <meta
@@ -24,7 +24,7 @@
     />
     <meta
       itemprop="image"
-      content="https://empeo.netlify.app/assets/social-share-cover.png"
+      content="https://empeo.netlify.app/assets/social-share-cover.jpg"
     />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta
