--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,10 @@
       content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
     <meta name="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://empeo.netlify.app/assets/social-share-cover.jpg"
+    />
   </head>
   <body>
     <app-root></app-root>
