--- a/src/index.html
+++ b/src/index.html
@@ -9,33 +9,16 @@
       name="description"
       content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
-    <meta
-      name="image"
-      content="https://empeo.netlify.app/assets/social-share-cover.jpg"
-    />
-    <!-- Schema.org for Google -->
-    <meta
-      itemprop="name"
-      content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
-    />
-    <meta
-      itemprop="description"
-      content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
-    />
-    <meta
-      itemprop="image"
-      content="https://empeo.netlify.app/assets/social-share-cover.jpg"
-    />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta
-      name="og:title"
+      property="og:title"
       content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
     />
     <meta
-      name="og:description"
+      property="og:description"
       content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
-    <meta name="og:type" content="website" />
+    <meta property="og:type" content="website" />
     <meta
       property="og:image"
       content="https://empeo.netlify.app/assets/social-share-cover.jpg"
