--- a/src/index.html
+++ b/src/index.html
@@ -3,26 +3,45 @@
   <head>
     <!-- COMMON TAGS -->
     <meta charset="utf-8" />
+    <!-- Search Engine -->
+    <!-- COMMON TAGS -->
+    <meta charset="utf-8" />
     <title>สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo</title>
     <!-- Search Engine -->
     <meta
       name="description"
       content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
-    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta
-      property="og:title"
+      name="image"
+      content="https://res.cloudinary.com/djasyj8sc/image/upload/v1689658104/social-share-cover_dwl1w5.jpg"
+    />
+    <!-- Schema.org for Google -->
+    <meta
+      itemprop="name"
       content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
     />
     <meta
-      property="og:description"
+      itemprop="description"
       content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
-    <meta property="og:type" content="website" />
     <meta
-      property="og:image"
+      itemprop="image"
       content="https://empeo.netlify.app/assets/social-share-cover.jpg"
     />
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta
+      name="og:title"
+      content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
+    />
+    <meta
+      name="og:description"
+      content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
+    />
+    <meta name="og:type" content="website" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
     <app-root></app-root>
