--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,7 @@
       itemprop="description"
       content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
-    <meta
-      itemprop="image"
-      content="https://empeo.netlify.app/assets/social-share-cover.jpg"
-    />
+    <meta itemprop="image" content="src/assets/social-share-cover.jpg" />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta
       name="og:title"
