--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="image"
-      content="https://empeo.netlify.app/assets/social-share-cover.jpg"
+      content="https://empeo.netlify.app/assets/social-share-cover.jpeg"
     />
     <!-- Schema.org for Google -->
     <meta
@@ -24,7 +24,7 @@
     />
     <meta
       itemprop="image"
-      content="https://empeo.netlify.app/assets/social-share-cover.jpg"
+      content="https://empeo.netlify.app/assets/social-share-cover.jpeg"
     />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta
@@ -37,7 +37,7 @@
     />
     <meta
       name="og:image"
-      content="https://empeo.netlify.app/assets/social-share-cover.jpg"
+      content="https://empeo.netlify.app/assets/social-share-cover.jpeg"
     />
     <meta name="og:url" content="https://empeo.netlify.app" />
     <meta
