--- a/src/index.html
+++ b/src/index.html
@@ -6,37 +6,31 @@
     <!-- Search Engine -->
     <!-- COMMON TAGS -->
     <meta charset="utf-8" />
-    <title>สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo</title>
+    <title>สมัครเลยตอนนี้!ทดลองใช้ฟรี 30 วัน | empeo</title>
     <!-- Search Engine -->
     <meta
       name="description"
-      content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
+      content="ทดลองใช้ฟรี!พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
     <meta
       name="image"
       content="https://res.cloudinary.com/djasyj8sc/image/upload/v1689664525/social-share-cover_pacxlm.jpg"
     />
     <!-- Schema.org for Google -->
-    <meta
-      itemprop="name"
-      content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
-    />
+    <meta itemprop="name" content="สมัครเลยตอนนี้!ทดลองใช้ฟรี 30 วัน | empeo" />
     <meta
       itemprop="description"
-      content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
+      content="ทดลองใช้ฟรี!พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
     <meta
       itemprop="image"
       content="https://res.cloudinary.com/djasyj8sc/image/upload/v1689664525/social-share-cover_pacxlm.jpg"
     />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta
-      name="og:title"
-      content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
-    />
+    <meta name="og:title" content="สมัครเลยตอนนี้!ทดลองใช้ฟรี 30 วัน | empeo" />
     <meta
       name="og:description"
-      content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
+      content="ทดลองใช้ฟรี!พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
     <meta name="og:type" content="website" />
 
