--- a/src/index.html
+++ b/src/index.html
@@ -3,39 +3,49 @@
   <head>
     <!-- COMMON TAGS -->
     <meta charset="utf-8" />
-    <!-- Search Engine -->
-    <!-- COMMON TAGS -->
-    <meta charset="utf-8" />
-    <title>สมัครเลยตอนนี้!ทดลองใช้ฟรี 30 วัน | empeo</title>
+    <title>สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo</title>
     <!-- Search Engine -->
     <meta
       name="description"
-      content="ทดลองใช้ฟรี!พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
+      content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
     <meta
       name="image"
-      content="https://res.cloudinary.com/djasyj8sc/image/upload/v1689664525/social-share-cover_pacxlm.jpg"
+      content="https://empeo.netlify.app/assets/social-share-cover.jpeg"
     />
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="สมัครเลยตอนนี้!ทดลองใช้ฟรี 30 วัน | empeo" />
+    <meta
+      itemprop="name"
+      content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
+    />
     <meta
       itemprop="description"
-      content="ทดลองใช้ฟรี!พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
+      content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
     <meta
       itemprop="image"
-      content="https://res.cloudinary.com/djasyj8sc/image/upload/v1689664525/social-share-cover_pacxlm.jpg"
+      content="https://empeo.netlify.app/assets/social-share-cover.jpeg"
     />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="สมัครเลยตอนนี้!ทดลองใช้ฟรี 30 วัน | empeo" />
+    <meta
+      name="og:title"
+      content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
+    />
     <meta
       name="og:description"
-      content="ทดลองใช้ฟรี!พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
+      content="ทดลองใช้ฟรี! พร้อมรับส่วนลดทันที 10% เมื่อสมัครแพคเกจรายปี"
     />
+    <meta
+      name="og:image"
+      content="https://empeo.netlify.app/assets/social-share-cover.jpeg"
+    />
+    <meta name="og:url" content="https://empeo.netlify.app" />
+    <meta
+      name="og:site_name"
+      content="สมัครเลยตอนนี้! ทดลองใช้ฟรี 30 วัน | empeo"
+    />
+    <meta name="og:locale" content="th_TH" />
     <meta name="og:type" content="website" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
     <app-root></app-root>
